--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "mcamara/laravel-localization": "^1.6"
+        "laravelcollective/html": "^6.2",
+        "livewire/livewire": "^2.6",
+        "mcamara/laravel-localization": "^1.6",
+        "spatie/laravel-permission": "^5.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
